# text-editor

./: .gitignore  .h  DESIGN  DEVLOG  LICENSE  Makefile  README  README.md  buffer.c  client.c  main.c  meson.build  networking.c  networking.h  server.c  utilities.c
.github/workflows/: codeql-analysis.yml
housekeeping/: mkdevlog
include/: .h  networking.h
src/: networking.c
